--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="hero-travel">
-                <img src="/Images/Group 40071 (2).png" alt="">
+                <img src="https://i.ibb.co/LNNghmP/Group-40071-2.png" alt="">
                 <h2>Hero <span class="text-primary">Travel</span></h2>
             </div>
             <div class="container">
@@ -66,7 +66,7 @@
                     <button class="btn">Read More</button>
                 </div>
                 <div class="popular-tours-image">
-                    <img src="/Images/Rectangle 4.png" alt="Tour Image">
+                    <img src="https://i.ibb.co/0jpDw0H/Rectangle-4.png" alt="Tour Image">
                 </div>
             </div>
         </section>
@@ -79,19 +79,19 @@
             <div class="cards">
                 <div class="card-difrent">
                     <div class="card-1 card">
-                        <img src="./Images/hotel 1.png" alt="">
+                        <img src="https://i.ibb.co/42C6T6P/hotel-1.png" alt="">
                         <h3 class="card-title">Handpicked Hotels</h3>
                         <p class="description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                     </div>
                     <div class="card-2 card">
-                        <img src="/Images/map 1.png" alt="">
+                        <img src="https://i.ibb.co/JKX2Qms/map-1.png" alt="">
                         <h3 class="card-title">Handpicked Hotels</h3>
                         <p class="description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                     </div>
                 </div>
                 <div class="spacial-card-container">
                     <div class="spacial-card">
-                        <img src="./Images/price-tag 1.png" alt="">
+                        <img src="https://i.ibb.co/w6ZY0tP/price-tag-1.png" alt="">
                         <h3 class="card-title">Handpicked Hotels</h3>
                         <p class="description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                     </div>
@@ -106,9 +106,9 @@
             <div class="tour-1">
                 <div class="tour-1-content">
                 <div class="tour-text-container">
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/CKVc6gV/Frame.png" alt=""> 7 Day / 6 Night</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/cyYzZ3h/Frame-2.png" alt=""> Max : 10</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/YtMrdW7/Frame-1.png" alt=""> Malaysia</p>
                 </div>
                 <h3>Tour To Satorini</h2>
                 <p class="description">Amet consectetur. Vulputate commodo felis 
@@ -120,9 +120,9 @@
             <div class="tour-2">
                 <div class="tour-content">
                 <div class="tour-text-container">
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/CKVc6gV/Frame.png" alt=""> Malaysia</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/cyYzZ3h/Frame-2.png" alt=""> Max : 10</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/YtMrdW7/Frame-1.png" alt=""> 7 Day / 6 Night</p>
                 </div>
                 <h3>Tour To Satorini</h2>
                 <p class="description">Amet consectetur. Vulputate commodo felis 
@@ -134,9 +134,9 @@
             <div class="tour-1">
                 <div class="tour-1-content">
                 <div class="tour-text-container">
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
-                  <p class="tour-description"><img src="/Images/Frame.png" alt=""> 7 Day / 6 Night</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/CKVc6gV/Frame.png" alt=""> Malaysia</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/cyYzZ3h/Frame-2.png" alt=""> Max : 10</p>
+                  <p class="tour-description"><img src="https://i.ibb.co/YtMrdW7/Frame-1.png" alt=""> 7 Day / 6 Night</p>
                 </div>
                 <h3>Tour To Satorini</h2>
                 <p class="description">Amet consectetur. Vulputate commodo felis 
@@ -158,7 +158,7 @@
                     <button class="btn">Read More</button>
                 </div>
                 <div class="mountain-img">
-                    <img src="/Images/Rectangle 8 (1).png" alt="Tfour Image">
+                    <img src="https://i.ibb.co/gV4rk4Y/Rectangle-8-1.png" alt="Tfour Image">
                 </div>
             </div>
         </section>
@@ -171,23 +171,23 @@
                     <input style="width: 100%;" class="newletter-input" type="email" placeholder="Enter Your email">
                     <button style="width: 100%; margin-top: 16px;" class="btn">Read More</button>
                 </div>
-                <div>
-                    <img src="/Images/butiful mountain.jpg" alt="">
+                <div class="mountain-img">
+                    <img src="https://i.ibb.co/hx674sn/butiful-mountain.jpg" alt="">
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="hero-travel" style="display: flex; justify-content: center;">
-            <img src="/Images/Group 40071 (2).png" alt="">
+            <img src="https://i.ibb.co/LNNghmP/Group-40071-2.png" alt="">
             <h2>Hero <span class="text-primary">Travel</span></h2>
         </div>
         <p class="description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
         <div class="footer-icon">
-            <img src="/Images/1.png" alt="">
-            <img src="/Images/2.png" alt="">
-            <img src="/Images/3.png" alt="">
-            <img src="/Images/4.png" alt="">
+            <img src="https://i.ibb.co/H7X19sV/1.png" alt="">
+            <img src="https://i.ibb.co/y8pDp4Z/2.png" alt="">
+            <img src="https://i.ibb.co/TP6JhQd/3.png" alt="">
+            <img src="https://i.ibb.co/2NYpG8B/4.png" alt="">
         </div>
         <p class="description">2017, All Rights Reserved.</p>
     </footer>
