--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </div>
         </div>
     </header>
+      
     <main>
         <section class="popular-tours-container">
             <div class="popular-tours">
@@ -167,8 +168,8 @@
                 <div class="new-sletter-content">
                     <h3>Newsletter</h3>
                     <p class="description" style="margin-bottom: 46px;">Get your daily dose of travel news & tips. Sign up today!</p>
-                    <input class="newletter-input" style="margin-bottom: 16px; width: 100%;" type="text" placeholder="Enter Your Name"> <br>
-                    <input style="width: 100%;" class="newletter-input" type="email" placeholder="Enter Your email">
+                    <input class="newsletter-input" style="margin-bottom: 16px; width: 100%;" type="text" placeholder="Enter Your Name"> <br>
+                    <input style="width: 100%;" class="newsletter-input" type="email" placeholder="Enter Your email">
                     <button style="width: 100%; margin-top: 16px;" class="btn">Read More</button>
                 </div>
                 <div class="mountain-img">
@@ -184,10 +185,10 @@
         </div>
         <p class="description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
         <div class="footer-icon">
-            <img src="https://i.ibb.co/H7X19sV/1.png" alt="">
-            <img src="https://i.ibb.co/y8pDp4Z/2.png" alt="">
-            <img src="https://i.ibb.co/TP6JhQd/3.png" alt="">
-            <img src="https://i.ibb.co/2NYpG8B/4.png" alt="">
+            <a href="https://x.com/" target="_blank"><img src="https://i.ibb.co/H7X19sV/1.png" alt=""></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="https://i.ibb.co/y8pDp4Z/2.png" alt=""></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="https://i.ibb.co/TP6JhQd/3.png" alt=""></a>
+            <a href="https://github.com/" target="_blank"><img src="https://i.ibb.co/2NYpG8B/4.png" alt=""></a>
         </div>
         <p class="description">2017, All Rights Reserved.</p>
     </footer>
